fix main-nav width overstretching in wider screens

--- a/scss/partials/_components.scss
+++ b/scss/partials/_components.scss
@@ -94,7 +94,7 @@
   .main-navigation ul {
     max-height: 20px;
     display: table;
-    width: 100%;
+    // width: 100%;
     padding-right: 40px;
   }
 
